--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ include_directories(${OpenCV_INCLUDE_DIRS} ${X11_INCLUDE_DIRS})
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(ObjectDetector main.cpp ObjectDetector.hpp ObjectDetector.cpp ThresholdAlgorithm.hpp Filter.hpp Center.hpp)
+add_executable(ObjectDetector main.cpp ObjectDetector.hpp ObjectDetector.cpp ThresholdAlgorithm.hpp Filter.hpp Center.hpp Parameters.hpp Parameters.cpp)
 target_link_libraries (ObjectDetector ${OpenCV_LIBS} ${X11_LIBRARIES})
